chore(auth): Changes querys for sp